# Conway_game_of_life

./: .gitignore  CMakeLists.txt  LICENSE  README.md  es_draw.fs  es_gol.fs  es_web.vs  game_of_life.c  game_of_life.fs  game_of_life.vs  gol.fs  gpu_gol.c  manualDraw.fs  single_thread_gol.c  template.html  web_gol.c
docs/: gameOfLife.js  gameOfLife.wasm  gpu_gol.data  gpu_gol.js  gpu_gol.wasm  index.html  styles.css
webuild/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  gameOfLife.html  gameOfLife.js  gameOfLife.wasm  gpu_gol.data  gpu_gol.html  gpu_gol.js  gpu_gol.wasm
